mostrando status corto

--- a/index_new.html
+++ b/index_new.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CHANCHITO cabreado</h1>
+    <h1>CHANCHITO feliz</h1>
     <h2>CHANCHITO feliz</h2>
     </body>
 </html>
